--- a/tpl/menu.html
+++ b/tpl/menu.html
@@ -1,9 +1,9 @@
 <div class="menu">
 <ons-list>
-	<ons-list-header>Buy</ons-list-header>
+	<ons-list-header>Feasting</ons-list-header>
 	<ons-list-item modifier="chevron" onclick="menu.setAbovePage('tpl/search.html', {closeMenu: true})">
 	<i class="fa fa-search"></i>
-	Search
+	Forrage
 	</ons-list-item>
 	<ons-list-item modifier="chevron" onclick="menu.setAbovePage('tpl/map.html', {closeMenu: true})">
 	<i class="fa fa-map-marker"></i>
@@ -11,29 +11,37 @@
 	</ons-list-item>
 	<ons-list-item modifier="chevron" onclick="menu.setAbovePage('tpl/purchase.html', {closeMenu: true})">
 	<i class="fa fa-shopping-cart"></i>
-	Purchases
+	My Groceries
 	</ons-list-item>
-	<ons-list-header>Sell</ons-list-header>
+	<ons-list-header>Farming</ons-list-header>
 	<ons-list-item modifier="chevron" onclick="menu.setAbovePage('tpl/search.html', {closeMenu: true})">
 	<i class="fa fa-leaf"></i>
-	Items
+	Current Crop
 	</ons-list-item>
 	<ons-list-item modifier="chevron" onclick="menu.setAbovePage('tpl/map.html', {closeMenu: true})">
 	<i class="fa fa-money"></i>
-	Sales
+	Past Harvest
 	</ons-list-item>
-	<ons-list-header>Account</ons-list-header>
+
+	<ons-list-header>Me</ons-list-header>
 	<ons-list-item modifier="chevron" onclick="menu.setAbovePage('tpl/search.html', {closeMenu: true})">
 	<i class="fa fa-user"></i>
-	Profile
+	About Me
 	</ons-list-item>
 	<ons-list-item modifier="chevron" onclick="menu.setAbovePage('tpl/map.html', {closeMenu: true})">
 	<i class="fa fa-credit-card"></i>
-	Add credit/coupon
+	My Credit
 	</ons-list-item>
-	<ons-list-item modifier="chevron" onclick="menu.setAbovePage('tpl/purchase.html', {closeMenu: true})">
-	<i class="fa fa-question"></i>
-	About
+	
+	<ons-list-header>Miscellaneous</ons-list-header>
+	<ons-list-item modifier="chevron" onclick="menu.setAbovePage('tpl/legal.html', {closeMenu: true})">
+	<i class="fa fa-legal"></i>
+	Law of the Land
 	</ons-list-item>
+	<ons-list-item modifier="chevron" onclick="menu.setAbovePage('tpl/logout.html', {closeMenu: true})">
+	<i class="fa fa-sign-out"></i>
+	Leave the Farm
+	</ons-list-item>
+	
 </ons-list>
 </div>
