--- a/tpl/menu.html
+++ b/tpl/menu.html
@@ -14,7 +14,7 @@
 	Purchases
 	</ons-list-item>
 	<ons-list-header>Sell</ons-list-header>
-	<ons-list-item modifier="chevron" onclick="menu.setAbovePage('tpl/search.html', {closeMenu: true})">
+	<ons-list-item modifier="chevron" onclick="menu.setAbovePage('tpl/manage.html', {closeMenu: true})">
 	<i class="fa fa-leaf"></i>
 	Items
 	</ons-list-item>
