--- a/tpl/signin.html
+++ b/tpl/signin.html
@@ -3,8 +3,9 @@
     <div class="left">
       <ons-toolbar-button onclick="menu.toggleMenu()"><ons-icon icon="bars"></ons-icon></ons-toolbar-button>
     </div>
-    <div class="center">Page 2</div>
+    <div class="center">Signin</div>
   </ons-toolbar>
 
-  <p style="text-align: center; color: #999; padding-top: 100px;">Page2 Contents</p>
+  <button>Login with Facebook</button>
+  <p>We'll never post anything to Facebook</p>
 </ons-page>
