--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <script src="bower_components/angular-ui-map/ui-map.js"></script>
   <script src="lib/onsen/js/onsenui.js"></script>    
   
+  <script src="js/const.js"></script>
   <script src="js/app.js"></script>  
   <script>
     ons.ready(function() {
