--- a/tpl/map.html
+++ b/tpl/map.html
@@ -3,7 +3,7 @@
     <div class="left">
       <ons-toolbar-button ng-click="menu.toggleMenu()"><ons-icon icon="bars"></ons-icon></ons-toolbar-button>
     </div>
-    <div class="center">Fiddy Farmers</div>
+    <div class="center">Fifty Farmers</div>
   </ons-toolbar>
 
 	<section id="map" ng-controller="MapCtrl" >
